crates/snapi-generators/tests/snapshots/typescript_fetch__create_user_resource_ts.snap
---
source: crates/snapi-generators/tests/typescript_fetch.rs
expression: resource
---
import type { CreateUserInput, User } from "../models";

export class UsersResource {
  constructor(private baseUrl: string, private headers: Record<string, string> = {}) {}

  /** Create a user */
  async createUser(body: CreateUserInput): Promise<User> {
    const url = new URL(`${this.baseUrl}/users`).toString();
    const response = await fetch(url, {
      method: "POST",
      headers: { "Content-Type": "application/json", ...this.headers },
      body: JSON.stringify(body),
    });
    if (!response.ok) throw new Error(`HTTP ${response.status}`);
    return response.json() as Promise<User>;
  }

}
