crates/snapi-generators/tests/snapshots/typescript_fetch__models_ts.snap
---
source: crates/snapi-generators/tests/typescript_fetch.rs
expression: models
---
export interface User {
  /** User ID */
  id: number;
  /** User's full name */
  name: string;
  /** Email address */
  email?: string | null;
}

export type UserStatus =
  | "ACTIVE"
  | "INACTIVE";
