crates/snapi-generators/tests/snapshots/typescript_fetch__pagination_resource_ts.snap
---
source: crates/snapi-generators/tests/typescript_fetch.rs
expression: resource
---
export class ItemsResource {
  constructor(private baseUrl: string, private headers: Record<string, string> = {}) {}

  /** List items with pagination */
  async listItems(query?: { page?: number; limit?: number }): Promise<unknown[]> {
    const url = new URL(`${this.baseUrl}/items`).toString();
    if (query) {
      const params = new URLSearchParams();
      Object.entries(query).forEach(([k, v]) => v != null && params.set(k, String(v)));
      url + '?' + params.toString();
    }
    const response = await fetch(url, {
      method: "GET",
      headers: { "Content-Type": "application/json", ...this.headers },
    });
    if (!response.ok) throw new Error(`HTTP ${response.status}`);
    return response.json() as Promise<unknown[]>;
  }

}
