crates/snapi-generators/tests/snapshots/typescript_fetch__recursive_models_ts.snap
---
source: crates/snapi-generators/tests/typescript_fetch.rs
expression: models
---
export interface Node {
  value: number;
  child?: Node | null;
}
